# GitAgent

./: MULTI_FILES_FEATURE.md  README.md  build.sh  gcli.py  pyproject.toml  requirements.txt  test.sh
git_agent/: cli.py
tests/: test_push_option.py
