[tool.poetry]
name = "git_agent"
version = "1.1.3"
homepage = "https://github.com/LinXueyuanStdio/GitAgent"
description = "A simple git agent for managing git repositories"
authors = ["Xueyuan Lin <linxy59@mail2.sysu.eud.cn>"]
readme = "README.md"
packages = [{ include = "git_agent", from = "." }]
cli = { "ga" = "git_agent.cli:main" }

license = "MIT"

# Only include the out directory of the frontend
# The order of the include/exclude lists is important!
include = ["docs/**"]
exclude = []

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
GitPython = "^3.1.18"
xlin = "0.1.6"
loguru = "^0.5.3"

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

