[tool.poetry]
name = "git-agent"
version = "1.0.4"
homepage = "https://github.com/LinXueyuanStdio/GitAgent"
description = "A simple git agent for managing git repositories"
authors = ["Xueyuan Lin <linxy59@mail2.sysu.eud.cn>"]
readme = "README.md"
packages = [ { include = "git_agent", from = "." } ]

license = "MIT"

# Only include the out directory of the frontend
# The order of the include/exclude lists is important!
include = ["docs/**"]
exclude = []

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
GitPython = "^3.1.44"
xlin = "0.1.6"
loguru = "^0.7.2"
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[tool.poetry.scripts]
gcli = "git_agent.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

